--- a/about.Rmd
+++ b/about.Rmd
@@ -1,9 +1,81 @@
 ---
-title: "About"
+title: " This is Sibei Liu's Acedemic Introduction"
 ---
 
-### About this site
 
-Sometimes you need to say a bit about the site -- how it was made, where it's hosted, where the source code can be found. 
+# Education Background
+09/2019-
+Columbia University, School of Public Health
 
-If this is for a project or analysis, I recommend giving some details about the R package versions that you used to create the content.
+Major: Biostatistics
+
+09/2014-06/2019 
+Jilin University, School of Public Health
+
+Major: Information Management & Information System (Medical Information Management)  
+
+Degree: Bachelor of Management & Bachelor of Preventive Medicine
+
+Average: 87.28/100             
+
+Major Ranking: 1/28 
+
+IELTS: 7.5                    
+
+GRE:329+3               
+
+# Publication
+￭ Shiyu ZHANG, Wei WANG, Chenglin TAO,**Sibei LIU**; 
+Building the Enterprise Technology Threat Warning Model based on the Perspective of the Patent Portfolio Analysis (Chinese), December, 2016; Journal of Information; ISSN: 1002-1965
+
+￭ Pallavi Misra,**Sibei LIU**, Xiangfei Meng,
+What DNA methylation modifications and/or genetic variations interact with childhood maltreatment in the development of depression: A systematic review, Journal of Affective Disorders,Volume 252,2019, Pages 325-333, ISSN 0165-0327,
+
+Accepted:
+￭ Tingting Gao, Xiangfei Meng, Yueyang Hu, Zeying Qin, Hui Ren, **Sibei LIU**, The Role of School Connectedness and Maladaptive Cognitions in the Association between Stress and Internet Addiction: A Serial Mediation Model, Perspectives in Psychiatric Care
+
+Submitted:
+￭ Muzi Li,**Sibei LIU**, Xiangfei Meng, Interactions of child maltreatment and genetic variations in adult psychopathology:A systematic review (Abstract), Canadian Society for Epidemiology and Biostatistics 2019 Abstracts.
+
+
+# Internship Experience
+07/2018-10/2018  
+
+Mitacs Summer Internship Program: Child Maltreatment and Genetic Variation in Adult Psychopathology: A Systematic Review                       Department of Psychiatry at McGill University
+Supervisor: Dr Xiangfei Meng
+Responsibility:
+
+Followed the standard process of Meta-analysis: 
+
+￭ Extracted available data and completed the quality evaluation for the screened paper.
+
+￭ Did the heterogeneity analysis, divided and summarized quantitative and qualitative parts.
+
+# Research Experience 
+03/2018-05/2018 
+The Influencing Factor of Teenager Smoking in Liaoning Province (A Global Youth Tobacco Survey in Liaoning )                      
+Department of Epidemiology and Health Statistics at Jilin University
+
+Supervisor: Associate Prof. Lina JIN, Associate Prof Yan Yao 
+
+Responsibility:
+
+￭ Determined the innovative perspective of data analysis.
+
+￭ Used the complex sampling pack in SPSS to analyze multistage stratified cluster sampling, including doing the Frequency to describe the data distribution, completing the Chi-square analysis and the logistic analysis to find risk factors of teenager smoking.
+
+￭ Wrote the manuscript. 
+
+
+# Honors & Awards
+05/2018 China Scholarship Council- Mitacs Summer Internship funding (More than 30000RMB ) 
+
+09/2017 China National Scholarship in Academic Year 2016-17 awarded by Ministry of Education (0.2%)
+
+10/2016 The Second Prize of FLTRP Cup English Speech Contest in 2016 (10%)
+
+10/2015 The Second Prize of FLTRP Cup English Writing Contest in 2015 (10%)
+
+09/2016 & 09/2018 The First Scholarship in Academic Years 2015-16 and 2016-17 at Jilin University (5%)
+
+09/2015 The Second Scholarship in Academic Year 2014-2015 at Jilin University (10%)
