Some update in index page

--- a/about.Rmd
+++ b/about.Rmd
@@ -41,7 +41,10 @@ Submitted:
 # Internship Experience
 07/2018-10/2018  
 
-Mitacs Summer Internship Program: Child Maltreatment and Genetic Variation in Adult Psychopathology: A Systematic Review                       Department of Psychiatry at McGill University
+Mitacs Summer Internship Program: Child Maltreatment and Genetic Variation in Adult Psychopathology: A Systematic Review                       
+
+Department of Psychiatry at McGill University
+
 Supervisor: Dr Xiangfei Meng
 Responsibility:
 
